syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "payment-service/pb";

service PaymentService {
  rpc ProcessPayment(ProcessPaymentRequest) returns (ProcessPaymentResponse);
  rpc GetPayment(GetPaymentRequest) returns (GetPaymentResponse);
}

message ProcessPaymentRequest {
  string payment_id = 1;
  string order_id = 2;
  double amount = 3;
  string method = 4;
  google.protobuf.Timestamp created_at = 5;
}

message ProcessPaymentResponse {
  string payment_id = 1;
}

message GetPaymentRequest {
  string payment_id = 1;
}

message GetPaymentResponse {
  string payment_id = 1;
  string order_id = 2;
  double amount = 3;
  string method = 4;
  google.protobuf.Timestamp created_at = 5;
}
